<?xml version="1.0"?>
<package format="2">
  <name>lonomy_path_controller</name>
  <version>0.0.0</version>
  <description>The lonomy_path_controller package</description>

  <maintainer email="lipascal@ethz.ch">pascal</maintainer>

  <license>TODO</license>

  <buildtool_depend>catkin</buildtool_depend>

  <depend>roscpp</depend>
  <depend>nav_msgs</depend>
  <depend>geometry_msgs</depend>
  <depend>roslib</depend> 
  <depend>tf</depend> 
  <depend>rowesys_navigation_msgs</depend> 
  <depend>elevation_map_msgs</depend>
<!--  <depend>elevation_mapping_cupy</depend>-->
  <depend>visualization_msgs</depend>
  <depend>tf_conversions</depend>
  <depend>eigen_conversions</depend>
  <depend>grid_map_core</depend>
  <depend>grid_map_ros</depend>

</package>